--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
+h1,h2,h3,p{
+  margin: 0px;
+  padding: 0px;
+}
+table, td, th{
+  border: 1px solid black;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.loader {
+    border: 10px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 10px solid #8ACA2B;
+    width: 100px;
+    height: 100px;
+    animation: loading 2s linear infinite;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  @keyframes loading {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
   }
-  to {
-    transform: rotate(360deg);
+  .wrapper{
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
-}
+  .container p{
+    font-size: 20px;
+    background-color: rgb(227, 227, 227);
+    padding: 10px;
+  }
+  .worldData{
+    height: auto;
+    width: 90%;
+    text-align: center;
+  }
+  .worldData >div{
+    padding-top: 70px;
+  }
+  .worldData > div h1{
+    color: #8ACA2B;
+  }
+  .newCase{
+    background-color: #FFEEAA;
+  }
+  .death{
+    background-color: red !important;
+    color: white;
+  }
+ 
+  thead > tr {
+    background-color: silver;
+  }
+  .loading-wrapper{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
